--- a/public/index.html
+++ b/public/index.html
@@ -60,16 +60,16 @@
           </div>
         </div>
       </nav>
-      <section class="py-0">
-        <div class="bg-holder" style="background-image:url(assets/img/illustrations/bg.png);background-position:center top;background-size:cover;">
+      <section class="py-0 bg-light-gradient">
+        <div class="bg-holder" style="background-image:url(assets/img/illustrations/hero-bg.png);background-position:top right;background-size:contain;">
         </div>
         <!--/.bg-holder-->
 
         <div class="container">
-          <div class="row align-items-center min-vh-100">
-            <div class="col-lg-6 col-md-5 order-md-1 py-6 py-md-4"><img class="img-fluid" src="assets/img/gallery/1.png" alt="" /></div>
-            <div class="col-md-7 col-lg-6 pt-md-9 mt-lg-0 text-center text-md-start">
-              <h1 class="display-1 fw-bold"> Building exactly the<br />eCommerce website you want.</h1>
+          <div class="row align-items-center">
+            <div class="col-lg-6 col-md-5 order-md-1 pt-8"><img class="img-fluid" src="assets/img/gallery/hero.png" alt="" /></div>
+            <div class="col-md-7 col-lg-6 text-center text-md-start pt-5 pt-md-9">
+              <h1 class="display-1 fw-bold">Building exactly the<br />eCommerce website you want.</h1>
               <p class="mt-3 mb-4">WooCommerce is a customizable, open-source eCommerce platform built on WordPress.Get started quickly and make your way.</p><a class="btn btn-lg btn-info rounded-pill me-2" href="#">Start a New Store </a><span> or  </span><a class="btn btn-link ps-1 ps-md-4 ps-lg-1" type="button"> Customize &amp; Extend ›</a>
             </div>
           </div>
@@ -79,36 +79,35 @@
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-      <section class="py-5">
+      <section class="py-6">
 
         <div class="container">
           <div class="row flex-center">
-            <div class="col-auto text-center mb-5">
+            <div class="col-auto text-center my-4">
               <h1 class="display-2 fw-bold">Your eCommerce<br /><span>made simple</span></h1>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-4 mb-5"><img class="img-fluid shadow-sm" src="assets/img/gallery/f1.png" alt="" />
+            <div class="col-md-4 mb-5 mb-md-0"><img class="img-fluid shadow-sm" src="assets/img/gallery/feature-1.png" alt="" />
               <div class="mt-3 text-center text-md-start">
-                <h2 class="fw-bold">All You Need to Start</h2>
+                <h4 class="display-6 fs-4 fs-md-2 fs-lg-3 fw-bold">All You Need to Start</h4>
                 <p class="mb-0">Add WooCommerce plugin to any WordPress site and set up a new store in minutes.</p><a class="btn btn-link ps-0" type="button"> Ecommerce Wordpress ›</a>
               </div>
             </div>
-            <div class="col-md-4 mb-5"><img class="img-fluid shadow-sm" src="assets/img/gallery/f2.png" alt="" />
+            <div class="col-md-4 mb-5 mb-md-0"><img class="img-fluid shadow-sm" src="assets/img/gallery/feature-2.png" alt="" />
               <div class="mt-3 text-center text-md-start">
-                <h2 class="fw-bold">Customize and Extend</h2>
+                <h4 class="display-6 fs-4 fs-md-2 fs-lg-3 fw-bold">Customize and Extend</h4>
                 <p class="mb-0">From subscriptions to gym classes to luxury cars, WooCommerce is fully customizable.</p><a class="btn btn-link ps-0" type="button"> Browse Extensions › </a>
               </div>
             </div>
-            <div class="col-md-4 mb-5"><img class="img-fluid shadow-sm" src="assets/img/gallery/f3.png" alt="" />
+            <div class="col-md-4 mb-5 mb-md-0"><img class="img-fluid shadow-sm" src="assets/img/gallery/feature-3.png" alt="" />
               <div class="mt-3 text-center text-md-start">
-                <h2 class="fw-bold">Active Community</h2>
+                <h4 class="display-6 fs-4 fs-md-2 fs-lg-3 fw-bold">Active Community</h4>
                 <p class="mb-0">WooCommerce is one of the fastest-growing eCommerce communities. </p><a class="btn btn-link ps-0" type="button"> Check our Forums ›</a>
               </div>
             </div>
           </div>
-        </div>
-        <!-- end of .container-->
+        </div><!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -116,25 +115,25 @@
 
 
       <div class="shapeup">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
           <path fill="#7854F7" fill-opacity="1" d="M0,64L120,69.3C240,75,480,85,720,85.3C960,85,1200,75,1320,69.3L1440,64L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
         </svg>
       </div>
-      <section class="pt-4 pt-md-5 pt-2 bg-info">
-        <div class="bg-holder" style="background-image:url(assets/img/illustrations/abg.png);background-position:center center;background-size:contain;">
+      <section class="pt-4 pt-md-5 bg-info">
+        <div class="bg-holder" style="background-image:url(assets/img/illustrations/about-bg.png);background-position:center center;background-size:contain;">
         </div>
         <!--/.bg-holder-->
 
         <div class="container">
           <div class="row mb-5 text-center">
-            <div class="col-12 col-md-4 mb-4"><img class="img-fluid rounded-3 shadow-lg z-index-1 image-up" src="assets/img/gallery/a1.png" alt="" /></div>
+            <div class="col-12 col-md-4 mb-4"><img class="img-fluid rounded-3 shadow-lg image-up" src="assets/img/gallery/about-2.png" alt="" /></div>
             <div class="col-12 col-md-8 text-md-start" style="max-width: 460px;">
               <h3 class="fw-medium text-light"> Develop <br />Without Limits</h3>
               <p class="text-light">WooCommerce is developer friendly, too. Built with a REST API, WooCommerce is scalable and can integrate with virtually any service. Design a complex store from scratch, extend a store for a client, or simply add a single product to a WordPress site—your store, your way.</p><a class="btn btn-lg btn-success rounded-pill" href="#">Read the Documentation</a>
             </div>
           </div>
           <div class="row flex-center">
-            <div class="col-12 col-md-4 order-0 order-md-1"><img class="img-fluid rounded-3 shadow-lg z-index-1 image-down" src="assets/img/gallery/a22.png" alt="" /></div>
+            <div class="col-12 col-md-4 order-0 order-md-1"><img class="img-fluid rounded-3 shadow-lg image-down" src="assets/img/gallery/about-1.png" alt="" /></div>
             <div class="col-12 col-md-8 text-center text-md-start order-1 order-md-0" style="max-width: 460px;">
               <h3 class="fw-medium text-light">Know our<br />Global Community</h3>
               <p class="text-light">WooCommerce is one of the fastest-growing eCommerce communities. We’re proud that the helpfulness of the community and a wealth of online resources are frequently cited as reasons our users love it. There are 80+ meetups worldwide!</p><a class="btn btn-lg btn-success rounded-pill" href="#">Read the Documentation</a>
@@ -143,18 +142,18 @@
         </div>
       </section>
       <div class="shapedown">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
           <path fill="#7854F7" fill-opacity="1" d="M0,256L120,250.7C240,245,480,235,720,234.7C960,235,1200,245,1320,250.7L1440,256L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path>
         </svg>
       </div>
-      <section class="py-7">
-        <div class="bg-holder" style="background-image:url(assets/img/gallery/t-bg.png);background-position:center center;background-size:contain;">
+      <section class="py-7 bg-light-gradient">
+        <div class="bg-holder" style="background-image:url(assets/img/gallery/testimonial-bg.png);background-position:center center;background-size:contain;">
         </div>
         <!--/.bg-holder-->
 
         <div class="container">
-          <div class="row flex-center">
-            <div class="col-auto text-center mb-5 z-index-1">
+          <div class="row flex-center mb-5">
+            <div class="col-auto text-center">
               <h1 class="display-2 fw-bold">Trusted by Agencies<br /><span>&amp; Store Owners</span></h1>
             </div>
           </div>
@@ -162,9 +161,9 @@
             <div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
               <div class="carousel slide carousel-fade" id="carouselExampleControls" data-bs-ride="carousel">
                 <div class="carousel-inner overflow-visible">
-                  <div class="card py-sm-6 px-sm-5 position-absolute w-100 h-100 shadow-sm" style="transform: translateY(52px) scale(.9)"></div>
-                  <div class="card py-sm-6 px-sm-5 position-absolute w-100 h-100 shadow-sm" style="transform: translateY(32px) scale(.934)"></div>
-                  <div class="card py-sm-6 px-sm-5 position-absolute w-100 h-100 shadow-sm"></div>
+                  <div class="card py-sm-6 px-sm-5 testimonial-card-shadow shadow-sm" style="transform: translateY(52px) scale(.9)"></div>
+                  <div class="card py-sm-6 px-sm-5 testimonial-card-shadow shadow-sm" style="transform: translateY(32px) scale(.934)"></div>
+                  <div class="card py-sm-6 px-sm-5 testimonial-card-shadow shadow-sm"></div>
                   <div class="carousel-item z-index-1 active">
                     <div class="card py-4 px-3 py-sm-6 px-sm-5 px-xl-7">
                       <div class="bg-holder mt-4" style="background-image:url(assets/img/gallery/q.png);background-position:center top;background-size:150px;">
@@ -172,7 +171,7 @@
                       <!--/.bg-holder-->
 
                       <div class="card-body z-index-1">
-                        <p class="card-text fs-2 lh-base text-center text-400">No other eCommerce platform allows people to start for free and grow their store as their business grows. More importantly, WooCommerce doesn't charge you a portion of your profits as your business grows!</p>
+                        <p class="card-text fs-2 text-center">No other eCommerce platform allows people to start for free and grow their store as their business grows. More importantly, WooCommerce doesn't charge you a portion of your profits as your business grows!</p>
                       </div>
                     </div>
                   </div>
@@ -183,7 +182,7 @@
                       <!--/.bg-holder-->
 
                       <div class="card-body z-index-1">
-                        <p class="card-text fs-2 lh-base text-center text-400">No other eCommerce platform allows people to start for free and grow their store as their business grows. More importantly, WooCommerce doesn't charge you a portion of your profits as your business grows!</p>
+                        <p class="card-text fs-2 text-center">WooCommerce doesn't charge you a portion of your profits as your business grows! No other eCommerce platform allows people to start for free and grow their store as their business grows. More importantly</p>
                       </div>
                     </div>
                   </div>
@@ -194,7 +193,7 @@
                       <!--/.bg-holder-->
 
                       <div class="card-body z-index-1">
-                        <p class="card-text fs-2 lh-base text-center text-400">More importantly, WooCommerce doesn't charge you a portion of your profits as your business grows! No other eCommerce platform allows people to start for free and grow their store as their business grows</p>
+                        <p class="card-text fs-2 text-center">More importantly, WooCommerce doesn't charge you a portion of your profits as your business grows! No other eCommerce platform allows people to start for free and grow their store as their business grows</p>
                       </div>
                     </div>
                   </div>
@@ -220,18 +219,18 @@
           <div class="bg-holder" style="background-image:url(undefined);background:url(assets/img/gallery/people-bg-shape.png) no-repeat center bottom, url(assets/img/gallery/people-bg-dot.png) no-repeat center bottom;">
           </div>
           <!--/.bg-holder-->
-          <img class="img-fluid position-relative z-index-1" src="assets/img/gallery/p.png" alt="" />
+          <img class="img-fluid position-relative z-index-1" src="assets/img/gallery/people.png" alt="" />
         </div>
       </section>
       <section class="py-0">
         <div class="container-fluid px-0">
-          <div class="card py-4 px-5 border-0 rounded-0 bg-primary">
+          <div class="card py-4 border-0 rounded-0 bg-primary">
             <div class="card-body">
               <div class="row flex-center">
-                <div class="col-lg-8 text-lg-end">
-                  <h1 class="text-light fw-bold">WooCommerce - the most customizable eCommerce<br />platform for building your online business.</h1>
+                <div class="col-xl-9 d-flex justify-content-center">
+                  <h2 class="text-light fw-bold">WooCommerce - the most customizable eCommerce<br />platform for building your online business.</h2>
                 </div>
-                <div class="col-lg-4"><a class="btn btn-lg btn-outline-light rounded-pill" href="#">GET STARTED</a></div>
+                <div class="col-xl-3"><a class="btn btn-lg btn-outline-light rounded-pill" href="#">GET STARTED</a></div>
               </div>
             </div>
           </div>
@@ -288,7 +287,7 @@
           </div>
           <hr class="opacity-25" />
           <div class="row justify-content-lg-around">
-            <div class="col-lg-auto col-4 mb-3 order-0">
+            <div class="col-6 col-sm-4 col-lg-auto mb-3 order-0">
               <h6 class="text-light lh-lg text-uppercase">Who we Are</h6>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
                 <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">About</a></li>
@@ -296,7 +295,7 @@
                 <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Work With Us</a></li>
               </ul>
             </div>
-            <div class="col-lg-auto col-4 mb-3 order-4 order-lg-1">
+            <div class="col-6 col-sm-4 col-lg-auto mb-3 order-4 order-lg-1">
               <h6 class="text-light lh-lg text-uppercase"> Woocommerce </h6>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
                 <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Features</a></li>
@@ -314,7 +313,7 @@
                 <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Email Newsletter</a></li>
               </ul>
             </div>
-            <div class="col-lg-auto col-4 mb-3 order-1 order-lg-2">
+            <div class="col-6 col-sm-4 col-lg-auto mb-3 order-1 order-lg-2">
               <h6 class="text-light lh-lg text-uppercase">Other products </h6>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
                 <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Storefront</a></li>
@@ -323,7 +322,7 @@
                 <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Sensei Extensions</a></li>
               </ul>
             </div>
-            <div class="col-lg-auto col-4 mb-3 order-3 order-lg-3">
+            <div class="col-6 col-sm-4 col-lg-auto mb-3 order-3 order-lg-3">
               <h6 class="text-light lh-lg text-uppercase">Support</h6>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
                 <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Documentation</a></li>
@@ -335,7 +334,7 @@
                 <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">California Users</a></li>
               </ul>
             </div>
-            <div class="col-lg-auto col-4 mb-3 order-2 order-lg-4">
+            <div class="col-6 col-sm-4 col-lg-auto mb-3 order-2 order-lg-4">
               <h6 class="text-light lh-lg text-uppercase">We recommend</h6>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
                 <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">WooExperts</a></li>
@@ -346,8 +345,7 @@
               </ul>
             </div>
           </div>
-        </div>
-        <!-- end of .container-->
+        </div><!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -394,8 +392,7 @@
             </div>
             <div class="col-sm-12 col-md-4 text-center text-md-end"> <a href="#"><img class="img-fluid" src="assets/img/icons/pf-logo.png" height="14" alt="" /></a></div>
           </div>
-        </div>
-        <!-- end of .container-->
+        </div><!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
