--- a/public/index.html
+++ b/public/index.html
@@ -360,7 +360,7 @@
 
         <div class="container">
           <div class="row flex-center">
-            <div class="col-sm-12 col-md-4 text-md-start px-md-0 pt-md-2 text-center">
+            <div class="col-sm-12 col-md-3 text-md-start px-md-0 pt-md-2 text-center">
               <ul class="list-unstyled list-inline">
                 <li class="list-inline-item mr-3"><a class="text-decoration-none" href="#!">
                     <svg class="bi bi-twitter" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#272D4E" viewBox="0 0 16 16">
@@ -381,7 +381,7 @@
                     </svg></a></li>
               </ul>
             </div>
-            <div class="col-sm-12 col-md-4 px-md-0 pt-md-2 text-md-center order-1 order-md-0">
+            <div class="col-sm-12 col-md-6 px-md-0 text-md-center order-1 order-md-0">
               <div class="text-400 text-center">
                 <p class="mb-0">This template is made with &nbsp;
                   <svg class="bi bi-suit-heart-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#7854F7" viewBox="0 0 16 16">
@@ -390,7 +390,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-sm-12 col-md-4 text-center text-md-end"> <a href="#"><img class="img-fluid" src="assets/img/icons/pf-logo.png" height="14" alt="" /></a></div>
+            <div class="col-sm-12 col-md-3 text-center text-md-end"> <a href="#"><img class="img-fluid" src="assets/img/icons/pf-logo.png" height="14" alt="" /></a></div>
           </div>
         </div><!-- end of .container-->
 
