--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,8 @@
               </div>
             </div>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -345,7 +346,8 @@
               </ul>
             </div>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -392,7 +394,8 @@
             </div>
             <div class="col-sm-12 col-md-3 text-center text-md-end"> <a href="#"><img class="img-fluid" src="assets/img/icons/pf-logo.png" height="14" alt="" /></a></div>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
