--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,7 @@
                 <div class="col-xl-9 d-flex justify-content-center">
                   <h2 class="text-light fw-bold">WooCommerce - the most customizable eCommerce<br />platform for building your online business.</h2>
                 </div>
-                <div class="col-xl-3"><a class="btn btn-lg btn-outline-light rounded-pill" href="#">GET STARTED</a></div>
+                <div class="col-xl-3 text-center"><a class="btn btn-lg btn-outline-light rounded-pill" href="#">GET STARTED</a></div>
               </div>
             </div>
           </div>
