--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
               <li class="nav-item"><a class="nav-link fw-medium" href="#">Develop</a></li>
               <li class="nav-item"><a class="nav-link fw-medium" href="#">Resources </a></li>
             </ul>
-            <form class="d-flex py-3 py-lg-0"><a class="btn btn-link text-1000 fw-medium order-1 order-lg-0 me-lg-2" type="button">Log In</a><a class="btn btn-info order-0 me-1" type="submit">Get Started</a>
+            <form class="d-flex py-3 py-lg-0"><a class="btn btn-link text-1000 fw-medium order-1 order-lg-0 me-lg-2" href="#" role="button">Log In</a><a class="btn btn-info order-0 me-1" href="#" role="button">Get Started</a>
               <div class="d-flex align-items-center ps-lg-3 order-3">
                 <svg class="bi bi-search" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#272D4E" viewBox="0 0 16 16">
                   <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
@@ -69,8 +69,8 @@
           <div class="row align-items-center">
             <div class="col-lg-6 col-md-5 order-md-1 pt-8"><img class="img-fluid" src="assets/img/gallery/hero.png" alt="" /></div>
             <div class="col-md-7 col-lg-6 text-center text-md-start pt-5 pt-md-9">
-              <h1 class="display-1 fw-bold">Building exactly the<br />eCommerce website you want.</h1>
-              <p class="mt-3 mb-4">WooCommerce is a customizable, open-source eCommerce platform built on WordPress.Get started quickly and make your way.</p><a class="btn btn-lg btn-info rounded-pill me-2" href="#">Start a New Store </a><span> or  </span><a class="btn btn-link ps-1 ps-md-4 ps-lg-1" type="button"> Customize &amp; Extend ›</a>
+              <h1 class="display-2 fw-bold">Building exactly the <br />eCommerce website you want.</h1>
+              <p class="mt-3 mb-4">WooCommerce is a customizable, open-source eCommerce platform built on WordPress.Get started quickly and make your way.</p><a class="btn btn-lg btn-info rounded-pill me-2" href="#" role="button">Start a New Store </a><span> or  </span><a class="btn btn-link ps-1 ps-md-4 ps-lg-1" href="#" role="button"> Customize &amp; Extend ›</a>
             </div>
           </div>
         </div>
@@ -84,31 +84,30 @@
         <div class="container">
           <div class="row flex-center">
             <div class="col-auto text-center my-4">
-              <h1 class="display-2 fw-bold">Your eCommerce<br /><span>made simple</span></h1>
+              <h1 class="display-3 fw-bold">Your eCommerce<br /><span>made simple</span></h1>
             </div>
           </div>
           <div class="row">
             <div class="col-md-4 mb-5 mb-md-0"><img class="img-fluid shadow-sm" src="assets/img/gallery/feature-1.png" alt="" />
               <div class="mt-3 text-center text-md-start">
                 <h4 class="display-6 fs-4 fs-md-2 fs-lg-3 fw-bold">All You Need to Start</h4>
-                <p class="mb-0">Add WooCommerce plugin to any WordPress site and set up a new store in minutes.</p><a class="btn btn-link ps-0" type="button"> Ecommerce Wordpress ›</a>
+                <p class="mb-0">Add WooCommerce plugin to any WordPress site and set up a new store in minutes.</p><a class="btn btn-link ps-0" href="#" role="button"> Ecommerce Wordpress ›</a>
               </div>
             </div>
             <div class="col-md-4 mb-5 mb-md-0"><img class="img-fluid shadow-sm" src="assets/img/gallery/feature-2.png" alt="" />
               <div class="mt-3 text-center text-md-start">
                 <h4 class="display-6 fs-4 fs-md-2 fs-lg-3 fw-bold">Customize and Extend</h4>
-                <p class="mb-0">From subscriptions to gym classes to luxury cars, WooCommerce is fully customizable.</p><a class="btn btn-link ps-0" type="button"> Browse Extensions › </a>
+                <p class="mb-0">From subscriptions to gym classes to luxury cars, WooCommerce is fully customizable.</p><a class="btn btn-link ps-0" href="#" role="button"> Browse Extensions › </a>
               </div>
             </div>
             <div class="col-md-4 mb-5 mb-md-0"><img class="img-fluid shadow-sm" src="assets/img/gallery/feature-3.png" alt="" />
               <div class="mt-3 text-center text-md-start">
                 <h4 class="display-6 fs-4 fs-md-2 fs-lg-3 fw-bold">Active Community</h4>
-                <p class="mb-0">WooCommerce is one of the fastest-growing eCommerce communities. </p><a class="btn btn-link ps-0" type="button"> Check our Forums ›</a>
+                <p class="mb-0">WooCommerce is one of the fastest-growing eCommerce communities. </p><a class="btn btn-link ps-0" href="#" role="button"> Check our Forums ›</a>
               </div>
             </div>
           </div>
-        </div>
-        <!-- end of .container-->
+        </div><!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -155,7 +154,7 @@
         <div class="container">
           <div class="row flex-center mb-5">
             <div class="col-auto text-center">
-              <h1 class="display-2 fw-bold">Trusted by Agencies<br /><span>&amp; Store Owners</span></h1>
+              <h1 class="display-3 fw-bold">Trusted by Agencies<br /><span>&amp; Store Owners</span></h1>
             </div>
           </div>
           <div class="row flex-center">
@@ -211,7 +210,7 @@
         <div class="container">
           <div class="row flex-center">
             <div class="col-xl-5 text-center mb-5 z-index-1">
-              <h1 class="display-2 fw-bold">Supported by real people</h1>
+              <h1 class="display-3 fw-bold">Supported by real people</h1>
               <p>Our team of Happiness Engineers works remotely from 58 countries providing customer support across multiple time zones.</p>
             </div>
           </div>
@@ -246,41 +245,29 @@
         <div class="container">
           <div class="row justify-content-sm-between py-6">
             <div class="col-auto">
-              <ul class="list-inline d-inline-block">
-                <div class="d-flex">
-                  <li>
-                    <svg class="bi bi-check-circle" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#ffffff" viewBox="0 0 16 16">
-                      <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
-                      <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"></path>
-                    </svg>
-                  </li>
-                  <p class="mb-0 text-light ms-2">30 day money back guarantee</p>
-                </div>
-              </ul>
+              <div class="d-flex">
+                <svg class="bi bi-check-circle" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#ffffff" viewBox="0 0 16 16">
+                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                  <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"></path>
+                </svg>
+                <p class="mb-0 text-light ms-2">30 day money back guarantee</p>
+              </div>
             </div>
             <div class="col-auto">
-              <ul class="list-inline d-inline-block">
-                <div class="d-flex">
-                  <li>
-                    <svg class="bi bi-gear-wide-connected" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#ffffff" viewBox="0 0 16 16">
-                      <path d="M7.068.727c.243-.97 1.62-.97 1.864 0l.071.286a.96.96 0 0 0 1.622.434l.205-.211c.695-.719 1.888-.03 1.613.931l-.08.284a.96.96 0 0 0 1.187 1.187l.283-.081c.96-.275 1.65.918.931 1.613l-.211.205a.96.96 0 0 0 .434 1.622l.286.071c.97.243.97 1.62 0 1.864l-.286.071a.96.96 0 0 0-.434 1.622l.211.205c.719.695.03 1.888-.931 1.613l-.284-.08a.96.96 0 0 0-1.187 1.187l.081.283c.275.96-.918 1.65-1.613.931l-.205-.211a.96.96 0 0 0-1.622.434l-.071.286c-.243.97-1.62.97-1.864 0l-.071-.286a.96.96 0 0 0-1.622-.434l-.205.211c-.695.719-1.888.03-1.613-.931l.08-.284a.96.96 0 0 0-1.186-1.187l-.284.081c-.96.275-1.65-.918-.931-1.613l.211-.205a.96.96 0 0 0-.434-1.622l-.286-.071c-.97-.243-.97-1.62 0-1.864l.286-.071a.96.96 0 0 0 .434-1.622l-.211-.205c-.719-.695-.03-1.888.931-1.613l.284.08a.96.96 0 0 0 1.187-1.186l-.081-.284c-.275-.96.918-1.65 1.613-.931l.205.211a.96.96 0 0 0 1.622-.434l.071-.286zM12.973 8.5H8.25l-2.834 3.779A4.998 4.998 0 0 0 12.973 8.5zm0-1a4.998 4.998 0 0 0-7.557-3.779l2.834 3.78h4.723zM5.048 3.967c-.03.021-.058.043-.087.065l.087-.065zm-.431.355A4.984 4.984 0 0 0 3.002 8c0 1.455.622 2.765 1.615 3.678L7.375 8 4.617 4.322zm.344 7.646l.087.065-.087-.065z"></path>
-                    </svg>
-                  </li>
-                  <p class="mb-0 text-light ms-2">Support teams across the world</p>
-                </div>
-              </ul>
+              <div class="d-flex">
+                <svg class="bi bi-gear-wide-connected" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#ffffff" viewBox="0 0 16 16">
+                  <path d="M7.068.727c.243-.97 1.62-.97 1.864 0l.071.286a.96.96 0 0 0 1.622.434l.205-.211c.695-.719 1.888-.03 1.613.931l-.08.284a.96.96 0 0 0 1.187 1.187l.283-.081c.96-.275 1.65.918.931 1.613l-.211.205a.96.96 0 0 0 .434 1.622l.286.071c.97.243.97 1.62 0 1.864l-.286.071a.96.96 0 0 0-.434 1.622l.211.205c.719.695.03 1.888-.931 1.613l-.284-.08a.96.96 0 0 0-1.187 1.187l.081.283c.275.96-.918 1.65-1.613.931l-.205-.211a.96.96 0 0 0-1.622.434l-.071.286c-.243.97-1.62.97-1.864 0l-.071-.286a.96.96 0 0 0-1.622-.434l-.205.211c-.695.719-1.888.03-1.613-.931l.08-.284a.96.96 0 0 0-1.186-1.187l-.284.081c-.96.275-1.65-.918-.931-1.613l.211-.205a.96.96 0 0 0-.434-1.622l-.286-.071c-.97-.243-.97-1.62 0-1.864l.286-.071a.96.96 0 0 0 .434-1.622l-.211-.205c-.719-.695-.03-1.888.931-1.613l.284.08a.96.96 0 0 0 1.187-1.186l-.081-.284c-.275-.96.918-1.65 1.613-.931l.205.211a.96.96 0 0 0 1.622-.434l.071-.286zM12.973 8.5H8.25l-2.834 3.779A4.998 4.998 0 0 0 12.973 8.5zm0-1a4.998 4.998 0 0 0-7.557-3.779l2.834 3.78h4.723zM5.048 3.967c-.03.021-.058.043-.087.065l.087-.065zm-.431.355A4.984 4.984 0 0 0 3.002 8c0 1.455.622 2.765 1.615 3.678L7.375 8 4.617 4.322zm.344 7.646l.087.065-.087-.065z"></path>
+                </svg>
+                <p class="mb-0 text-light ms-2">Support teams across the world</p>
+              </div>
             </div>
             <div class="col-auto">
-              <ul class="list-inline d-inline-block">
-                <div class="d-flex">
-                  <li>
-                    <svg class="bi bi-shield-lock-fill" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#ffffff" viewBox="0 0 16 16">
-                      <path fill-rule="evenodd" d="M8 0c-.69 0-1.843.265-2.928.56-1.11.3-2.229.655-2.887.87a1.54 1.54 0 0 0-1.044 1.262c-.596 4.477.787 7.795 2.465 9.99a11.777 11.777 0 0 0 2.517 2.453c.386.273.744.482 1.048.625.28.132.581.24.829.24s.548-.108.829-.24a7.159 7.159 0 0 0 1.048-.625 11.775 11.775 0 0 0 2.517-2.453c1.678-2.195 3.061-5.513 2.465-9.99a1.541 1.541 0 0 0-1.044-1.263 62.467 62.467 0 0 0-2.887-.87C9.843.266 8.69 0 8 0zm0 5a1.5 1.5 0 0 1 .5 2.915l.385 1.99a.5.5 0 0 1-.491.595h-.788a.5.5 0 0 1-.49-.595l.384-1.99A1.5 1.5 0 0 1 8 5z"></path>
-                    </svg>
-                  </li>
-                  <p class="mb-0 text-light ms-2">Safe &amp; Secure online payment</p>
-                </div>
-              </ul>
+              <div class="d-flex">
+                <svg class="bi bi-shield-lock-fill" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#ffffff" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M8 0c-.69 0-1.843.265-2.928.56-1.11.3-2.229.655-2.887.87a1.54 1.54 0 0 0-1.044 1.262c-.596 4.477.787 7.795 2.465 9.99a11.777 11.777 0 0 0 2.517 2.453c.386.273.744.482 1.048.625.28.132.581.24.829.24s.548-.108.829-.24a7.159 7.159 0 0 0 1.048-.625 11.775 11.775 0 0 0 2.517-2.453c1.678-2.195 3.061-5.513 2.465-9.99a1.541 1.541 0 0 0-1.044-1.263 62.467 62.467 0 0 0-2.887-.87C9.843.266 8.69 0 8 0zm0 5a1.5 1.5 0 0 1 .5 2.915l.385 1.99a.5.5 0 0 1-.491.595h-.788a.5.5 0 0 1-.49-.595l.384-1.99A1.5 1.5 0 0 1 8 5z"></path>
+                </svg>
+                <p class="mb-0 text-light ms-2">Safe &amp; Secure online payment</p>
+              </div>
             </div>
           </div>
           <div class="row flex-center">
@@ -346,8 +333,7 @@
               </ul>
             </div>
           </div>
-        </div>
-        <!-- end of .container-->
+        </div><!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -394,8 +380,7 @@
             </div>
             <div class="col-sm-12 col-md-3 text-center text-md-end"> <a href="#"><img class="img-fluid" src="assets/img/icons/pf-logo.png" height="14" alt="" /></a></div>
           </div>
-        </div>
-        <!-- end of .container-->
+        </div><!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
