--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,8 @@
               </div>
             </div>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -223,6 +224,10 @@
         </div>
       </section>
       <section class="py-0">
+        <div class="bg-holder z-index-2" style="background-image:url(assets/img/illustrations/cta-bg.png);background-position:bottom right;background-size:61px 60px;margin-top:15px;margin-right:15px;margin-left:-58px;">
+        </div>
+        <!--/.bg-holder-->
+
         <div class="container-fluid px-0">
           <div class="card py-4 border-0 rounded-0 bg-primary">
             <div class="card-body">
@@ -333,7 +338,8 @@
               </ul>
             </div>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -380,7 +386,8 @@
             </div>
             <div class="col-sm-12 col-md-3 text-center text-md-end"> <a href="#"><img class="img-fluid" src="assets/img/icons/pf-logo.png" height="14" alt="" /></a></div>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
